Remove common SQL endpoint and semaphore wrangler config
