# apps/ingress-proxy-contract/openapi.json
@@ -87,112 +87,6 @@
         }
       }
     },
-    "/__common/sql": {
-      "post": {
-        "operationId": "common.execSql",
-        "tags": ["(internal)"],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "statement": {
-                    "type": "string",
-                    "minLength": 1
-                  }
-                },
-                "required": ["statement"]
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "rows": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "propertyNames": {
-                          "type": "string"
-                        },
-                        "additionalProperties": {}
-                      }
-                    },
-                    "columns": {
-                      "type": "array",
-                      "items": {
-                        "type": "string"
-                      }
-                    },
-                    "stat": {
-                      "type": "object",
-                      "properties": {
-                        "rowsAffected": {
-                          "type": "integer",
-                          "minimum": -9007199254740991,
-                          "maximum": 9007199254740991
-                        },
-                        "rowsRead": {
-                          "anyOf": [
-                            {
-                              "type": "integer",
-                              "minimum": -9007199254740991,
-                              "maximum": 9007199254740991
-                            },
-                            {
-                              "type": "null"
-                            }
-                          ]
-                        },
-                        "rowsWritten": {
-                          "anyOf": [
-                            {
-                              "type": "integer",
-                              "minimum": -9007199254740991,
-                              "maximum": 9007199254740991
-                            },
-                            {
-                              "type": "null"
-                            }
-                          ]
-                        },
-                        "queryDurationMs": {
-                          "anyOf": [
-                            {
-                              "type": "integer",
-                              "minimum": -9007199254740991,
-                              "maximum": 9007199254740991
-                            },
-                            {
-                              "type": "null"
-                            }
-                          ]
-                        }
-                      },
-                      "required": ["rowsAffected", "rowsRead", "rowsWritten", "queryDurationMs"]
-                    },
-                    "lastInsertRowid": {
-                      "type": "integer",
-                      "minimum": -9007199254740991,
-                      "maximum": 9007199254740991
-                    }
-                  },
-                  "required": ["rows", "columns", "stat"]
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/__common/refresh-registry": {
       "post": {
         "operationId": "common.refreshRegistry",
